[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enlist-io"
version = "0.1.0"
description = "A Python package for enlist-io"
authors = [
    {name = "Jimmy Hernandez", email = "jimoem24@gmail.com"},
]

keywords = [
    "filesystem",
    "directory",
    "scanner",
    "csv",
    "files",
    "folders"
]
requires-python = ">=3.10"

readme = "README.md"

license = {file = "LICENSE"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/JimmyHernandez/enlist-io"
Repository = "https://github.com/JimmyHernandez/enlist-io"
Issues = "https://github.com/JimmyHernandez/enlist-io/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]</content>
<parameter name="filePath">/home/jimoem24/Developer/enlist-io/pyproject.toml
